--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "propfind",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "argh",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jade": "~1.7.0"
+  }
 }
